--- a/src/pages/Sales/Customerdetails/Customerdetails.module.scss
+++ b/src/pages/Sales/Customerdetails/Customerdetails.module.scss
@@ -140,6 +140,94 @@
     }
 }
 
+.ctsPopup {
+
+    :global(.modal-dialog) {
+        
+        :global(.modal-content) {
+            border:none;
+            border-radius: 8px;
+            
+            :global(.modal-header) {
+                background-color:var(--Main2);
+                color:#fff;
+                padding: 15px 20px;
+
+                :global(.btn-close) {
+                    color: #fff;
+                    filter: invert(338%) sepia(0%) saturate(2467%) hue-rotate(130deg) brightness(95%) contrast(320%);
+                    opacity: 1;
+                }
+            }
+            :global(.modal-body) {
+                padding: 20px 20px;
+
+                .formBox {
+                    margin-bottom: 15px;
+
+                    :global(.form-label) {
+                        margin: 0;
+                        font-size: 18px;
+                        font-weight: 500;
+                    }
+                    :global(.form-control) {
+                        border: 1px solid #d7d7d7;
+                        border-radius: 8px;
+                        padding: 10px 12px;
+
+                        &:focus {
+                            box-shadow:none;
+                            border-color:var(--Main2);
+                        }
+                    }
+                    :global(.form-select) {
+                        border: 1px solid #d7d7d7;
+                        border-radius: 8px;
+                        padding: 10px 12px;
+
+                        &:focus {
+                            box-shadow:none;
+                            border-color:var(--Main2);
+                        }
+                    }
+                }
+            }
+            
+            :global(.modal-footer) {
+                padding: 25px 15px;
+                justify-content: center;
+
+                .leftft {
+
+                    button {
+                        color:var(--Main2);
+                        font-size:18px;
+                        font-weight:600;
+                    }
+                }
+                .rightft {
+                    text-align: right;
+
+                    button {
+                        padding: 10px 30px;
+                        margin-left: 15px;
+                        border-radius: 8px;
+                    }
+                    .close {
+                        background:#AACBFE;
+                        color:#fff;
+                    }
+                    .apply {
+                        background:var(--Main2);
+                        color:#fff;
+                    }
+                }
+            }
+
+        }
+    }
+}
+
 /*=======================================================
 //////////////RESPONSIVE MEDIA QUERY START///////////////
 =======================================================*/
@@ -154,69 +242,4 @@
     
     }
 }
-:global(.modal-body) {
-    padding: 20px 20px;
-
-    .formBox {
-        margin-bottom: 15px;
-
-        :global(.form-label) {
-            margin: 0;
-            font-size: 18px;
-            font-weight: 500;
-        }
-        :global(.form-control) {
-            border: 1px solid #d7d7d7;
-            border-radius: 8px;
-            padding: 10px 12px;
-
-            &:focus {
-                box-shadow:none;
-                border-color:var(--Main2);
-            }
-        }
-        :global(.form-select) {
-            border: 1px solid #d7d7d7;
-            border-radius: 8px;
-            padding: 10px 12px;
-
-            &:focus {
-                box-shadow:none;
-                border-color:var(--Main2);
-            }
-        }
-    }
-}
-
-:global(.modal-footer) {
-    padding: 25px 15px;
-    justify-content: center;
-
-    .leftft {
-
-        button {
-            color:var(--Main2);
-            font-size:18px;
-            font-weight:600;
-        }
-    }
-    .rightft {
-        text-align: right;
-
-        button {
-            padding: 10px 30px;
-            margin-left: 15px;
-            border-radius: 8px;
-        }
-        .close {
-            background:#AACBFE;
-            color:#fff;
-        }
-        .apply {
-            background:var(--Main2);
-            color:#fff;
-        }
-    }
-}
-
 
